# concesionaria-premium-quality

./: .gitignore  README.md
.github/workflows/: build.yaml  deploy.yaml
deploy/: docker-compose.dev.yaml  docker-compose.yaml
deploy/config/backend/: .env  .env.example
deploy/config/frontend/: .env.example
deploy/config/nginx/: .env.example  nginx.conf
src/backend/: Dockerfile  main.py  pyproject.toml
src/backend/controllers/: car.py
src/backend/core/: config.py  db.py  email.py
src/backend/models/: car.py  contact.py  plan.py
src/backend/routers/: car.py  contact.py
src/backend/templates/: email_to_company.html  email_to_customer.html
src/frontend/: Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml
src/frontend/src/assets/images/: logo.psd
src/frontend/src/components/: AlejoideLogo.astro  CarCard.astro  CarFeatures.css  CarFeatures.tsx  CarGrid.astro  CarGrid.css  CarGrid.tsx  Contact.css  Contact.tsx  Footer.astro  Header.astro  Hero.astro  IndexOffers.astro  Services.astro  SkeletonCard.astro  Stats.astro
src/frontend/src/core/: config.ts
src/frontend/src/data/: financingPlans.ts
src/frontend/src/layouts/: Layout.astro
src/frontend/src/lib/: cars.ts
src/frontend/src/pages/: catalog.astro  financing.astro  index.astro  offers.astro
src/frontend/src/pages/api/: contact.ts
src/frontend/src/pages/cars/: [car_code].astro
src/frontend/src/types/: car.ts  plan.ts
src/tests/: cars.json  populate_db.py
