[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
    "resend>=2.17.0",
    "sqlmodel>=0.0.24",
]
